Apply base download dir setting.

BUG:263736